--- a/style.css
+++ b/style.css
@@ -347,6 +347,7 @@ main section.releted-content .swiper-slide {
 main section.releted-content .product-list {
   margin-top: 60px;
   display: grid;
+  width: 100%;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
 }
