--- a/style.scss
+++ b/style.scss
@@ -376,6 +376,7 @@ main {
       .product-list {
         margin-top: 60px;
         display: grid;
+        width: 100%;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 40px;
         .product-list__item {
